--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2557,7 +2557,7 @@ ul.footer_social li i {
 	width: 100%;
 	height: 70vh;
 	margin: 0;
-	background: url(../images/slider_img_1.jpg) center center no-repeat;
+	background: url(../images/banners/consultoria-de-marketing-todo-o-brasil.webp) center center no-repeat;
 	background-size: cover;
 	text-align: center;
 	position: relative;
